# emronfhir

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  pytest.ini  start_celerybeat.sh  start_celeryworker.sh
apps/admin/: apps.py  custom_admin.py
apps/api/: urls.py  views.py
apps/api/tests/: test_api.py
apps/authentication/: account.py  signals.py  urls.py  views.py
apps/authentication/templates/account/: email_confirm.html
apps/authentication/tests/: test_account_adapter.py  test_api.py  test_signals.py
apps/core/: admin.py  fake_data.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/core/tests/: test_admin.py  test_api.py  test_models.py  test_tasks.py
client/frontend/: .env.development.example  .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  vite.config.js
client/frontend/src/: App.vue  main.js
client/frontend/src/assets/: main.css
client/frontend/src/components/: LoginUser.vue  PasswordForm.vue  RegisterUser.vue  RequestResetPassword.vue  ResetPassword.vue  UserForm.vue  UserProfile.vue
client/frontend/src/libs/: error-message-parser.js  form-rules.js  utils.js
client/frontend/src/pages/: ActionsPage.vue  DashboardPage.vue  DataPage.vue  DefaultPublicPage.vue  LabsPage.vue  MedicationsPage.vue  ResetPasswordPage.vue  SettingsPage.vue  SmartAuth.vue  StandardLayout.vue  (+2 more)
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  devel.py  production.py  test.py
testing_resources/fixtures/scenarios/: basic.py
(+14 files in other folders)
